<resources>
    <string name="app_name">DoAnDiDongV2</string>
    <string name="from_gallery">Từ thư viện</string>
    <string name="capture_image">Chụp ảnh</string>
    <string name="no_notification">Không thông báo</string>
    <string name="at_event_time">Tại thòi gian bắt đầu sự kiện</string>
    <string name="ten_minutes_before">Trước 10 phút</string>
    <string name="thirty_minutes_before">Trước 30 phút</string>
    <string name="custom_notify_time">Tuỳ chọn</string>
    <string name="delete_event">Xoá sự kiện</string>
    <string name="modify_event">Chỉnh sửa sự kiện</string>
    <string name="custom_notify_time_txtview">Hiện thông báo trước</string>
    <string name="exit_dialog">Huỷ</string>
    <string name="stop_modifying_event">Bạn có muốn huỷ các thay đổi?</string>
    <string name="stop_creating_event">Bạn có muốn huỷ các thay đổi?</string>
    <string name="keep_editing">Tiếp tục chỉnh sửa</string>
    <string name="discard_changes">Huỷ các thay đổi</string>
    <string name="modify_color">Đổi màu</string>
    <string name="event_calendar_color">Sự kiện</string>
    <string name="current_day_calendar_color">Ngày hiện tại</string>
    <string name="selected_day_calendar_color">Ngày đang chọn</string>
    <string name="main_calendar_color">Màu nền lịch</string>
    <string name="year_view_option">Xem theo năm</string>
    <string name="sort_by_start_time_asc">Sắp theo thời gian bắt đầu tăng dần</string>
    <string name="sort_by_start_time_desc">Sắp theo thời gian bắt đầu giảm dần</string>
    <string name="sort_by_create_time_asc">Sắp theo thời điểm tạo tăng dần</string>
    <string name="sort_by_create_time_desc">Sắp theo thời điểm tạo giảm dần</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="event_items">
        <item>Chọn 1 đính kèm</item>
        <item>Số điện thoại</item>
        <item>Hình ảnh</item>
    </string-array>
    <string name="action_save">Lưu</string>
    <string name="title_activity_date_detail">Sự kiện trong ngày</string>
    <string name="title_activity_add_date_event">Thêm sự kiện mới</string>
    <string name="title_activity_event_location_ggmap">Map</string>


    <string name="title_activity_welcome">Home</string>
    <string name="next">Tiếp tục</string>
    <string name="skip">Bỏ qua</string>
    <string name="start">Tiếp tục</string>

    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">!</string>

    <string name="slide_2_title">Tap vào số ngày để đặt thông báo</string>
    <string name="slide_2_desc">!</string>

    <string name="slide_3_title">Thông báo nhắc nhở</string>
    <string name="slide_3_desc"></string>



    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
</resources>
